<resources>
    <string name="app_name">Boleias</string>
    <string name="username">Escolha um username</string>
    <string name="password">Palavra Secreta</string>
    <string name="login">Entrar</string>
    <string name="passwordForgot">Esqueceu-se da palavra secreta ?</string>
    <string name="signIn">Registe-se!</string>
    <string name="newAccount">Nao possui conta ainda?</string>
    <string name="email">Email do usuario</string>
    <string name="confirmPass">Confirme a palavra secreta</string>
    <string name="registar">Registar</string>
    <string name="findride">Procurar Boleia</string>
    <string name="offerride">Oferecer Boleia</string>
    <string name="startRide">Local de partida:</string>
    <string name="endRide">Local de chegada:</string>
    <string name="search">Procurar Resultados</string>
    <string name="seats">Lugares Disponiveis:</string>
    <string name="seatsNumber">4</string>
    <string name="startRideLocation">Start Location</string>
    <string name="endRideLocation">End Location</string>
    <string name="price">Preço:</string>
    <string name="priceTag">20€</string>
    <string name="timeOfTravel">22/02/2019 14:35</string>
    <string name="stayLoggedIn">Conitnuar conectado ?</string>
    <string name="name">Nome</string>
    <string name="no_cars_hint_message">Carregue aqui para adicionar um novo veiculo</string>
    <string name="no_img_hint_message">Seleccione uma foto sua</string>
    <string name="takePhoto">Tire uma fotografia</string>
    <string name="selectPhoto">Seleccione uma fotografia</string>
    <string name="cancel">Cancelar</string>
    <string name="addPhotoTitle">Adicione uma imagem sua</string>
    <string name="create_car_brand_hint">Marca do carro</string>
    <string name="create_car_button">Criar carro</string>
    <string name="car_model">Modelo do carro</string>
    <string name="fuel_type">Tipo de combustivel</string>
    <string name="seatsAvailable">Numero de lugares disponiveis</string>
    <string name="create_brand_empty_name_alert">Por favor introduza a marca do carro</string>
    <string name="create_model_empty_name_alert">Por favor introduza o modelo do carro</string>
    <string name="create_fuel_empty_name_alert">Por favor indique o tipo de combustivel do carro</string>
    <string name="create_seats_empty_alert">Por favor indique o numero de passageiros do carro</string>
    <string name="delete_car_dialog_title">Apagar veiculo</string>
    <string name="delete_car_dialog_message">Tem a certeza que deseja eliminar o \\\'%s\\\' da sua lista ??</string>
    <string name="delete_car_positive">Apagar</string>
    <string name="title_activity_maps">Map</string>
</resources>
